# docs/swagger.json
@@ -90,8 +90,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/interfaces.SectorInputTest"
+                            "$ref": "#/definitions/interfaces.SectorInputTestNoBytes"
                         }
+                    },
+                    {
+                        "type": "file",
+                        "description": "Content",
+                        "name": "content",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -787,15 +794,9 @@
                 }
             }
         },
-        "interfaces.SectorInputTest": {
+        "interfaces.SectorInputTestNoBytes": {
             "type": "object",
             "properties": {
-                "content": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
                 "description": {
                     "type": "string"
                 },
